--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -20014,6 +20014,10 @@ Set background opacity, allowed range is [0, 1]. Default is 0.
 @item m
 Set metering mode, can be peak: @code{p} or rms: @code{r},
 default is @code{p}.
+
+@item ds
+Set display scale, can be linear: @code{lin} or log: @code{log},
+default is @code{lin}.
 @end table
 
 @section showwaves
