avfilter/vf_amplify: add more options for finer filtering
Signed-off-by: Paul B Mahol <onemda@gmail.com>

--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -5207,6 +5207,14 @@ Set threshold for difference amplification. Any differrence greater or equal to
 this value will not alter source pixel. Default is 10.
 Allowed range is from 0 to 65535.
 
+@item low
+Set lower limit for changing source pixel. Default is 65535. Allowed range is from 0 to 65535.
+This option controls maximum possible value that will decrease source pixel value.
+
+@item high
+Set high limit for changing source pixel. Default is 65535. Allowed range is from 0 to 65535.
+This option controls maximum possible value that will increase source pixel value.
+
 @item planes
 Set which planes to filter. Default is all. Allowed range is from 0 to 15.
 @end table
